--- a/README
+++ b/README
@@ -1,20 +1,12 @@
 
+
+Left off at
+    http://doc.perl6.org/language/5to6-nutshell#Compound_Statements
+
+
+
 Docs
     http://doc.perl6.org/
-
-
-I have a symlink from perl6 to "six", so this will work:
-    $ six hello.p6
-
-    ...My fingers just don't want to reach for the 6 after typing "perl".  And 
-    when they do start to reach for it, they invariably hit the 5 instead of 
-    the 6 the first three times.  So fuck it, just call it "six".  
-
-    Shit.  This doesn't work, since rakudobrew's "perl6" is actually just a 
-    shell script that's assuming the name of the actual executable ("perl6") 
-    should be the same as the name of the shell script being invoked.  Deal 
-    with this at some point.
-
 
 INSTALLING {#{{{
     http://rakudo.org/how-to-get-rakudo/
@@ -74,61 +66,6 @@ INSTALLING {#{{{
 
         Yay!
 }#}}}
-
-IDENTIFIERS {#{{{
-    Names can include letters and numbers, but must start with a letter.
-
-    They can also now include dashes and single-quotes, but only one at a 
-    time.  And the first character after a dash or single-quote must again be 
-    a letter.
-
-    So these are valid identifiers:
-        long-name
-        don't
-        long-a5s-name
-
-    But these aren't:
-        long--name
-        long-75s-name
-}#}}}
-MODULES {#{{{
-    https://modules.perl6.org/
-
-    Install with
-        $ panda install <MODULENAME>
-
-
-    v5 (Run Perl5 inside Perl6 script) {#{{{
-        Allows you to run Perl5 code inside Perl6.
-
-            ...perl6 code...
-
-            use v5;
-            if( $^O eq 'MSWin32' ) {
-                say "What are you thinking?!?";
-            }
-
-            use 6.0.0;
-            ...more perl6 code...
-
-        v5 is a "slang", which likely means it's going to be a subset of 
-        perl5.
-
-        See also Inline::Perl5, which embeds a perl5 interpreter, likely 
-        allowing you to run real perl5 code.
-
-    }#}}}
-}#}}}
-TRUTH {#{{{
-    Looks like truth is mostly like perl5.
-
-    HOWEVER, the string "0" is TRUE in perl6.
-
-    perl6 also has an actual Boolean type.
-        if True  {
-            say "Hello";
-        }
-}#}}}
 TUTORIALS {#{{{
     http://doc.perl6.org/language.html
 
@@ -136,7 +73,7 @@ TUTORIALS {#{{{
     Looks pretty useful.
 
 }#}}}
-UNIMPLEMENTED *** {#{{{
+UNIMPLEMENTED *** {
     I'm starting to play with perl6 before the Xmas 2015 official production 
     release.
         This is rakudo version 2015.11-357-g587f700 built on MoarVM version 2015.11-34-gc3eea17 implementing Perl v6.b.
@@ -145,23 +82,5 @@ UNIMPLEMENTED *** {#{{{
     I'm going to just assume those things will be fixed in v1.0.
 
     Ack for "NYI" for things that fit this bill.
-}#}}}
-WHITESPACE {#{{{
-
-    Whitespace rules are similar to perl5, but not identical.
-
-    This one is going to burn me for quite a while.  You now NEED a space 
-    after a keyword, like if or while.  So this is no longer valid:
-        if( True ) {
-            say "It's true."
-        }
-     
-     That'll blow up because there's no space between the 'f' and the opening 
-     paren.
-
-     To make up for it, the parens themselves are not necessary anymore (Hey, 
-     you got your Python in my Perl!), so something like this is fine:
-        if True { say "It's true!" }
-
-}#}}}
+}
 
