--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Variables sections, but both of those sections did include stuff that I didn't
 get yet, so I should follow along in order from here on.
 
 Left off at
-    Concurrency
+    Concurrency (the Proc::Async section).
 
 
 
