--- a/README
+++ b/README
@@ -14,8 +14,7 @@ Variables sections, but both of those sections did include stuff that I didn't
 get yet, so I should follow along in order from here on.
 
 Left off at
-    Containers (Flattening, items and containers)
-        Read this page several times - important stuff here.
+    Control Flow
 
 
 
